--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,6 +10,27 @@ body {
     width: 100%;
 }
 
+.bg-primary {
+  background-color: var(--primary-color) !important;
+}
+
+.text-primary {
+  color: var(--primary-color) !important;
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
+.btn-primary:hover {
+  background-color: var(--secondary-color);
+  border-color: var(--secondary-color);
+}
+
+.bg-success {
+    background-color: var(--success-color) !important;
+}
+
 main {
     flex: 1;
 }
