--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -119,6 +119,7 @@
     font-size: 1.15rem;
     font-weight: 700;
     line-height: 1.4;
+    color: white;
     transition: color 0.3s ease;
 }
 
@@ -134,7 +135,7 @@
 }
 
 .news-title .community-report-title {
-    color: white;
+    color: inherit;
     display: inline-block;
 }
 
